--- a/operations/other.html
+++ b/operations/other.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>In-Stock Medicines</title>
+    <title>Other items</title>
     <style>
         body {
             font-family: sans-serif;
@@ -35,8 +35,8 @@
     </style>        
 </head>
 <body>
-    <h1 style="text-align: center;">In-Stock Medicines</h1>
+    <h1 style="text-align: center;">Other items</h1>
     <div id="medicineList" class="medicineList"></div>
-    <script src="instock.js"></script>
+    <script src="other.js"></script>
 </body>
 </html>
