--- a/operations/outstock.html
+++ b/operations/outstock.html
@@ -35,8 +35,8 @@
     </style>        
 </head>
 <body>
-    <h1 style="text-align: center;">In-Stock Medicines</h1>
+    <h1 style="text-align: center;">OUT of Stock Medicines</h1>
     <div id="medicineList" class="medicineList"></div>
-    <script src="instock.js"></script>
+    <script src="outstock.js"></script>
 </body>
 </html>
