--- a/operations/today.html
+++ b/operations/today.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>In-Stock Medicines</title>
+    <title>consumer list</title>
     <style>
         body {
             font-family: sans-serif;
@@ -17,7 +17,7 @@
             padding: 10px;
             background-color: rgb(244, 219, 236);
             text-align: center;
-            width: 500px;
+            width: 700px;
             object-fit: contain;
 
         }
@@ -35,8 +35,8 @@
     </style>        
 </head>
 <body>
-    <h1 style="text-align: center;">In-Stock Medicines</h1>
+    <h1 style="text-align: center;">Today's transaction list</h1>
     <div id="medicineList" class="medicineList"></div>
-    <script src="instock.js"></script>
+    <script src="today.js"></script>
 </body>
 </html>
